Fix dark mode tag links

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -87,6 +87,9 @@ body.dark-mode nav {
 	body a {
 		color: var(--white);
 	}
+	body .tag {
+		color: var(--gray);
+	}
 }
 
 header {
